--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-		<title>D'Maria Chicharrones</title>
+		<title>Silicon Brained Machines</title>
 	</head>
 
 	<body>
