correccion de error en css/

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -7,12 +8,11 @@
 
 	<body>
 		<h1>Silicon Brained Machines</h1>
-
 		<div>
 			<img 
-				src="https://drive.google.com/uc?export=view&id=1zehckWwxVTPOsy7bPdx8YsBWnb6pHN4z"
+				src="https://drive.google.com/uc?export=view&id=1c3VO8TqYwBHUo5ibB3Vigkp7mCa123Cg"
     				class="center"
-				>
+			>
 		</div>
 	</body>
 </html>
